--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,18 +1,18 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-Black.eot');
-    src: url('../fonts/Roboto-Black.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/Roboto-Black.woff') format('woff'),
-    url('../fonts/Roboto-Black.ttf') format('truetype');
-    font-weight: 500;
+    font-family: 'Gilroy';
+    src: url('../fonts/Gilroy-Medium.eot');
+    src: url('../fonts/Gilroy-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Gilroy-Medium.woff') format('woff'),
+    url('../fonts/Gilroy-Medium.ttf') format('truetype');
+    font-weight: 300;
     font-style: normal;
     }
     @font-face {
-        font-family: 'Roboto';
-        src: url('../fonts/Roboto-Light.eot');
-        src: url('../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Roboto-Light.woff') format('woff'),
-        url('../fonts/Roboto-Light.ttf') format('truetype');
-        font-weight: 300;
+        font-family: 'Gilroy';
+        src: url('../fonts/Gilroy-Bold.eot');
+        src: url('../fonts/Gilroy-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Gilroy-Bold.woff') format('woff'),
+        url('../fonts/Gilroy-Bold.ttf') format('truetype');
+        font-weight: 500;
         font-style: normal;
     }
