--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,32 +1,29 @@
-header {
-    background-color: #4267B2;
-}
-
 .header__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 60px;
 }
 
-h1 {
-    display: block;
-    color: #ffffff;
-    font-weight: 500;
-}
 
 .menu {
-    height: 60px;
-    width: 750px;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     margin: 0;
+    padding: 0;
     list-style-type: none;
     &__item{
-        padding-right: 45px;
         font-weight: 300;
-        font-size: 23px;
-        color: #ffffff;
+        font-size: 18px;
+        color:  #070707;
     };    
+}
+
+.devider {
+    width: 1200px;
+    border: 1px solid #828282;
+    margin-top: 10px;
 }
