--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,10 @@
 *{
-  font-family: 'Roboto';
+  font-family: 'Gilroy';
 }
 
 .container {
-    max-width: 1500px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 @import 'menu';
+@import 'bio';
