--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -4,8 +4,6 @@
     align-items: center;
     height: 60px;
 }
-
-
 .menu {
     width: 100%;
     display: flex;
@@ -16,9 +14,17 @@
     padding: 0;
     list-style-type: none;
     &__item{
-        font-weight: 300;
-        font-size: 18px;
-        color:  #070707;
+        font-weight: 500;
+        font-size: 25px;
+        &:hover {
+            color: #070707;
+            font-size: 45px;
+            transition: 0.5s all;
+        }
+        a {
+            color:  #828282;
+            text-decoration: none;
+        }
     };    
 }
 
