--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,16 @@ h2 {
   -webkit-transition: 0.5s all;
   transition: 0.5s all;
 }
+.contacts #rs-link {
+  width: 80px;
+  height: 80px;
+}
+.contacts #rs-link:hover {
+  width: 160px;
+  height: 160px;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+}
 
 footer {
   min-height: 30px;
