--- a/scss/_contacts.scss
+++ b/scss/_contacts.scss
@@ -18,4 +18,13 @@
             }
         }
     }
+    #rs-link {
+        width: 80px;
+        height: 80px;
+        &:hover {
+            width: 160px;
+            height: 160px;
+            transition: 0.5s all;
+        }
+    }
 }
